# sqlx_struct_enhanced

./: .gitignore  AGGREGATION_API_REDESIGN_PROPOSAL.md  AGGREGATION_BUILDER_DESIGN_ISSUE.md  ARCHITECTURE_VALIDATION_REPORT.md  AUTO_INDEX_INFERENCE.md  BINDPROXY_IMPLEMENTATION_SUMMARY.md  CLAUDE.md  COMPILE_TIME_INDEX_ANALYSIS.md  COVERING_PARTIAL_INDEX_SUMMARY.md  Cargo.toml  DECIMAL_FEATURE_SUMMARY.md  DECIMAL_QUICK_START.md  DECIMAL_TEST_RESULTS.md  DECIMAL_USAGE_GUIDE.md  IMPLEMENTATION_GUIDE.md  JOIN_ANALYSIS_IMPLEMENTATION_SUMMARY.md  JOIN_GROUPBY_IMPLEMENTATION_SUMMARY.md  LOG_SQL_GUIDE.md  MULTI_DB_PROXY_DESIGN.md  MYSQL_SQLITE_TEST_RESULTS.md  MySQL_INTEGRATION_TEST_ISSUE.md  PHASE0_COMPILE_TIME_ANALYSIS.md  PHASE3_FEATURES.md  PROXY_DESIGN_PROPOSAL.md  PROXY_MVP_SUMMARY.md  PROXY_USAGE_EXAMPLE.md  QUICK_START_GUIDE.md  README.md  README_DECIMAL_SUPPORT.md  README_FETCH_IMPLEMENTATION.md  RESERVED_KEYWORDS_SUPPORT.md  SESSION_COMPLETION_SUMMARY.md  SUBQUERY_ANALYSIS_SUMMARY.md  TESTING.md  USAGE.md  docker-compose.yml  test_expansion.rs
.claude/: settings.local.json
analyzer/: Cargo.toml
analyzer/src/: join_analysis_tests.rs  main.rs
docs/: DEBUG_BULK_CAST.md
examples/: AGGREGATION_EXAMPLES.md  aggregation_advanced.rs  aggregation_basics.rs  aggregation_fetch_methods.rs  aggregation_joins.rs  aggregation_real_world.rs  check_log_sql.rs  compile_time_analysis.rs  covering_partial_indexes.rs  decimal_example.rs  extended_types_performance.rs  extended_types_real_world.rs  extended_types_simple.rs  join_tuples.rs  mysql_compile_time_analysis.rs  proxy_mvp_example.rs  proxy_poc.rs  proxy_working_example.rs  sqlite_compile_time_analysis.rs  test_basic.rs  test_bulk_sql_output.rs  test_cast_as_attribute.rs  test_datetime_crud.rs  test_datetime_only.rs  test_decimal.rs  test_decimal_cast.rs  test_insert_sql_format.rs  test_join_groupby_analysis.rs  test_join_sql.rs  test_join_subquery_analysis.rs  test_left_join.rs  test_mysql_fetch_methods.rs  test_quote.rs  test_reserved_keywords.rs  test_select_star_replacement.rs  test_sqlite_fetch_methods.rs  test_user_like.rs  verify_log_sql.rs
sqlx_struct_macros/: Cargo.toml
sqlx_struct_macros/src/: compile_time_analyzer.rs  decimal_helpers.rs  lib.rs  query_extractor.rs  simple_parser.rs  struct_schema_parser.rs
sqlx_struct_macros/src/parser/: column_extractor.rs  mod.rs  sql_parser.rs
src/: decimal_helpers.rs  lib.rs  migration.rs  traits.rs
src/aggregate/: mod.rs  query_builder.rs
src/join/: mod.rs  query_builder.rs  sql_generator.rs  tuple_decoder.rs
src/proxy/: bind.rs  mod.rs  mysql.rs  postgres.rs  postgres.rs.bak  sqlite.rs  trait.rs
tests/: aggregate_tests.rs  bindproxy_test.rs  bulk_json_test.rs  compile_time_analysis_test.rs  covering_partial_index_test.rs  datetime_bind_test.rs  datetime_utc_crud_test.rs  db_connection_test.rs  decimal_bind_test.rs  decimal_helpers_test.rs  decimal_integration_test.rs  decimal_simplified_syntax_test.rs  extended_types_integration_test.rs  extended_types_mysql_integration_test.rs  join_groupby_analysis_test.rs  join_tests.rs  join_tuple_tests.rs  migration_tests.rs  no_cast_test.rs  phase3_features.rs  simple_test.rs  subquery_analysis_test.rs  test.rs
tests_binaries/: Cargo.toml  README.md  mysql_test.rs  sqlite_test.rs
