[workspace]
members = [
    ".",
    "sqlx_struct_macros"
]

[package]
name = "sqlx_struct_enhanced"
version = "0.1.0"
edition = "2021"

[features]
default = ["postgres"]
postgres = ["sqlx/runtime-tokio-rustls", "sqlx/json", "sqlx/postgres", "sqlx_struct_macros/postgres"]
mysql = ["sqlx/runtime-tokio-rustls", "sqlx/json", "sqlx/mysql", "sqlx_struct_macros/mysql"]
sqlite = ["sqlx/runtime-tokio-rustls", "sqlx/json", "sqlx/sqlite", "sqlx_struct_macros/sqlite"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.3", default-features = false, features = ["runtime-tokio", "tls-rustls", "all-databases", "uuid"], optional = true}
sqlx_struct_macros = { version = "*", path = "sqlx_struct_macros", default-features = false }
tokio = {version = "1.26.0", features = ["full"]}
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
once_cell = "1.19"
futures = "0.3"

[dev-dependencies]
sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-rustls", "postgres"] }
sqlx_struct_enhanced =  { version = "*", path = ".", features = ["postgres"] }
tokio-test = "0.4.2"
serial_test = "3.0"
