[workspace]
members = [
    ".",
    "sqlx_struct_macros"
]

[package]
name = "sqlx_struct_enhanced"
version = "0.1.0"
edition = "2021"

[features]
default = ["postgres"]
postgres = ["sqlx/runtime-tokio-rustls", "sqlx/json", "sqlx/postgres", "sqlx_struct_macros/postgres", "uuid"]
mysql = ["sqlx/runtime-tokio-rustls", "sqlx/json", "sqlx/mysql", "sqlx_struct_macros/mysql", "uuid"]
sqlite = ["sqlx/runtime-tokio-rustls", "sqlx/json", "sqlx/sqlite", "sqlx_struct_macros/sqlite", "uuid"]
decimal = ["rust_decimal"]
chrono = ["dep:chrono"]
json = ["dep:serde_json"]
uuid = ["dep:uuid"]
all-types = ["decimal", "chrono", "json", "uuid"]
join_queries = ["sqlx_struct_macros/join_queries"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.3", default-features = false, optional = true }
sqlx_struct_macros = { version = "*", path = "sqlx_struct_macros", default-features = false }
tokio = {version = "1.26.0", features = ["full"]}
uuid = { version = "1.10.0", features = ["v4", "fast-rng"], optional = true }
chrono = { version = "0.4", optional = true }
serde_json = { version = "1.0", optional = true }
once_cell = "1.19"
futures = "0.3"
rust_decimal = { version = "1.32", optional = true }

[dev-dependencies]
sqlx_struct_enhanced =  { version = "*", path = ".", default-features = false, features = ["postgres", "uuid"] }
sqlx = { version = "0.7.3", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "migrate"] }
tokio-test = "0.4.2"
serial_test = "3.0"
